
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emtest"
version = "0.0.1"
description = "Testing utilities which I find useful."
readme = {file = "ReadMe.md", content-type = "text/markdown"}
requires-python = ">=3.6"
authors = [{ name = "Emendir" , email = "dev@emendir.tech"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
